tests/invalid_ast_samples/90186e3f0182378d8e86f963dd01fdb315ec8de19d2c9fff086986d7f64f88e4.py
from ast import Expr
from ast import FormattedValue
from ast import Load
from ast import Module
from ast import Name

tree = Module(
    body=[
        Expr(value=FormattedValue(value=Name(id="name_1", ctx=Load()), conversion=115))
    ],
    type_ignores=[],
)

# version: 3.12.0
#
# Source:
# {name_1!s}
#
#
# Error:
#     SyntaxError('invalid syntax', ('<file>', 1, 8, '{name_1!s}\n', 1, 9))
